server: add strict to tsconfig

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -4,6 +4,7 @@
         "composite": true,
         "declaration": true,
         "declarationMap": true,
+        "strict": true,
         "rootDir": ".",
         "outDir": "./dist"
     },
