--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,11 @@
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/node": "18.13.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "eslint": "8.34.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "nodemon": "2.0.20",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
