--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["airbnb-base", "airbnb-typescript/base"],
+    "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "parserOptions": {
