--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
     "packages/server"
   ],
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/express": "4.17.17",
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "5.53.0",
@@ -28,7 +29,9 @@
     "eslint": "8.34.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.6.0",
     "nodemon": "2.0.20",
+    "prettier": "2.8.4",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
