--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "@arrecife/server",
-  "version": "0.0.1",
-  "description": "Back-end para Arrecife",
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eplq/Arrecife.git"
-  },
-  "author": "eplq",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/eplq/Arrecife/issues"
-  },
-  "homepage": "https://github.com/eplq/Arrecife",
-  "workspaces": [
-    "packages/server"
-  ],
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "4.0.0",
-    "@types/express": "4.17.17",
-    "@types/node": "18.13.0",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
-    "eslint": "8.34.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.6.0",
-    "nodemon": "2.0.20",
-    "prettier": "2.8.4",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5"
-  },
-  "dependencies": {
-    "express": "4.18.2"
-  }
+    "name": "@arrecife/server",
+    "version": "0.0.1",
+    "description": "Back-end para Arrecife",
+    "private": true,
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/eplq/Arrecife.git"
+    },
+    "author": "eplq",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/eplq/Arrecife/issues"
+    },
+    "homepage": "https://github.com/eplq/Arrecife",
+    "workspaces": [
+        "packages/server"
+    ],
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "4.0.0",
+        "@types/express": "4.17.17",
+        "@types/node": "18.13.0",
+        "@typescript-eslint/eslint-plugin": "5.53.0",
+        "@typescript-eslint/parser": "5.53.0",
+        "eslint": "8.34.0",
+        "eslint-config-airbnb-base": "15.0.0",
+        "eslint-config-airbnb-typescript": "17.0.0",
+        "eslint-config-prettier": "8.6.0",
+        "nodemon": "2.0.20",
+        "prettier": "2.8.4",
+        "ts-node": "10.9.1",
+        "typescript": "4.9.5"
+    },
+    "dependencies": {
+        "express": "4.18.2",
+        "mysql2": "3.1.2",
+        "reflect-metadata": "0.1.13",
+        "typeorm": "0.3.12"
+    }
 }
