--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,6 +36,7 @@
         "typescript": "4.9.5"
     },
     "dependencies": {
+        "@trpc/server": "10.13.0",
         "express": "4.18.2",
         "mysql2": "3.1.2",
         "reflect-metadata": "0.1.13",
