--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,6 +40,7 @@
         "express": "4.18.2",
         "mysql2": "3.1.2",
         "reflect-metadata": "0.1.13",
-        "typeorm": "0.3.12"
+        "typeorm": "0.3.12",
+        "zod": "3.20.6"
     }
 }
