fix prettier import plugin decorators-legacy

--- a/packages/server/.prettierrc
+++ b/packages/server/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "semi": true,
-  "tabWidth": 4,
-  "trailingComma": "none",
-  "importOrder": ["^@arrecife/(.*)$"],
-  "importOrderSeparation": true,
-  "singleQuote": true
+    "semi": true,
+    "tabWidth": 4,
+    "trailingComma": "none",
+    "importOrder": ["^@arrecife/(.*)$"],
+    "importOrderSeparation": true,
+    "decoratorsBeforeExport": true,
+    "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+    "singleQuote": true
 }
