--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,9 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon",
         "build": "tsc -b",
-        "run": "npm run build && node ./dist/src/index.js",
-        "typeorm": "typeorm-ts-node-esm",
-        "migrate": "typeorm-ts-node-esm migration:run -- -d src/db.ts"
+        "run": "npm run build && node ./dist/src/index.js"
     },
     "repository": {
         "type": "git",
@@ -36,6 +34,7 @@
         "eslint-config-prettier": "8.6.0",
         "nodemon": "2.0.20",
         "prettier": "2.8.4",
+        "prisma": "4.11.0",
         "ts-node": "10.9.1",
         "typescript": "4.9.5"
     },
