--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
         "typescript": "4.9.5"
     },
     "dependencies": {
+        "@prisma/client": "4.11.0",
         "@trpc/server": "10.13.0",
         "express": "4.18.2",
         "zod": "3.20.6"
