--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -41,6 +41,7 @@
     "dependencies": {
         "@prisma/client": "4.11.0",
         "@trpc/server": "10.13.0",
+        "bcrypt": "5.1.0",
         "express": "4.18.2",
         "zod": "3.20.6"
     }
