--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     ],
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "4.0.0",
+        "@types/bcrypt": "5.0.0",
         "@types/express": "4.17.17",
         "@types/node": "18.13.0",
         "@typescript-eslint/eslint-plugin": "5.53.0",
