--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -44,6 +44,7 @@
         "@trpc/server": "10.13.0",
         "bcrypt": "5.1.0",
         "express": "4.18.2",
+        "validator": "13.9.0",
         "zod": "3.20.6"
     }
 }
