--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
         "@types/bcrypt": "5.0.0",
         "@types/express": "4.17.17",
         "@types/node": "18.13.0",
+        "@types/validator": "13.7.13",
         "@typescript-eslint/eslint-plugin": "5.53.0",
         "@typescript-eslint/parser": "5.53.0",
         "eslint": "8.34.0",
