--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,6 +8,6 @@
         "rootDir": ".",
         "outDir": "./dist"
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "test/**/*", "jest.config.ts"],
     "exclude": ["node_modules", "dist/**/*"]
 }
