--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/bcrypt": "5.0.0",
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
     "@types/jest": "29.4.0",
     "@types/node": "18.13.0",
@@ -48,6 +49,7 @@
     "@prisma/client": "4.11.0",
     "@trpc/server": "10.13.0",
     "bcrypt": "5.1.0",
+    "cookie-parser": "1.4.6",
     "express": "4.18.2",
     "validator": "13.9.0",
     "zod": "3.20.6"
