--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,58 +1,58 @@
 {
-  "name": "@arrecife/server",
-  "version": "0.0.1",
-  "description": "Back-end para Arrecife",
-  "private": true,
-  "scripts": {
-    "test": "jest -i",
-    "test:watch": "jest -i --watchAll",
-    "dev": "nodemon",
-    "build": "tsc -b",
-    "run": "npm run build && node ./dist/src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eplq/Arrecife.git"
-  },
-  "author": "eplq",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/eplq/Arrecife/issues"
-  },
-  "homepage": "https://github.com/eplq/Arrecife",
-  "workspaces": [
-    "packages/server"
-  ],
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "4.0.0",
-    "@types/bcrypt": "5.0.0",
-    "@types/cookie-parser": "1.4.3",
-    "@types/express": "4.17.17",
-    "@types/jest": "29.4.0",
-    "@types/node": "18.13.0",
-    "@types/validator": "13.7.13",
-    "@typescript-eslint/eslint-plugin": "5.53.0",
-    "@typescript-eslint/parser": "5.53.0",
-    "eslint": "8.34.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.6.0",
-    "jest": "29.5.0",
-    "jest-mock-extended": "3.0.3",
-    "nodemon": "2.0.20",
-    "prettier": "2.8.4",
-    "prisma": "4.11.0",
-    "ts-jest": "29.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "4.9.5"
-  },
-  "dependencies": {
-    "@prisma/client": "4.11.0",
-    "@trpc/server": "10.13.0",
-    "bcrypt": "5.1.0",
-    "cookie-parser": "1.4.6",
-    "express": "4.18.2",
-    "validator": "13.9.0",
-    "zod": "3.20.6"
-  }
+    "name": "@arrecife/server",
+    "version": "0.0.1",
+    "description": "Back-end para Arrecife",
+    "private": true,
+    "scripts": {
+        "test": "npx prisma migrate reset --force && jest -i",
+        "test:watch": "jest -i --watchAll",
+        "dev": "nodemon",
+        "build": "tsc -b",
+        "run": "npm run build && node ./dist/src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/eplq/Arrecife.git"
+    },
+    "author": "eplq",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/eplq/Arrecife/issues"
+    },
+    "homepage": "https://github.com/eplq/Arrecife",
+    "workspaces": [
+        "packages/server"
+    ],
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "4.0.0",
+        "@types/bcrypt": "5.0.0",
+        "@types/cookie-parser": "1.4.3",
+        "@types/express": "4.17.17",
+        "@types/jest": "29.4.0",
+        "@types/node": "18.13.0",
+        "@types/validator": "13.7.13",
+        "@typescript-eslint/eslint-plugin": "5.53.0",
+        "@typescript-eslint/parser": "5.53.0",
+        "eslint": "8.34.0",
+        "eslint-config-airbnb-base": "15.0.0",
+        "eslint-config-airbnb-typescript": "17.0.0",
+        "eslint-config-prettier": "8.6.0",
+        "jest": "29.5.0",
+        "jest-mock-extended": "3.0.3",
+        "nodemon": "2.0.20",
+        "prettier": "2.8.4",
+        "prisma": "4.11.0",
+        "ts-jest": "29.0.5",
+        "ts-node": "10.9.1",
+        "typescript": "4.9.5"
+    },
+    "dependencies": {
+        "@prisma/client": "4.11.0",
+        "@trpc/server": "10.13.0",
+        "bcrypt": "5.1.0",
+        "cookie-parser": "1.4.6",
+        "express": "4.18.2",
+        "validator": "13.9.0",
+        "zod": "3.20.6"
+    }
 }
