--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "scripts": {
         "test": "jest -i",
+        "test:coverage": "jest -i --coverage",
         "test:watch": "jest -i --watchAll",
         "dev": "nodemon",
         "build": "tsc -b",
