--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,17 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist",
-        "baseUrl": ".",
-        "moduleResolution": "nodenext",
-        "module": "CommonJS",
-        "target": "Es2018",
-        "sourceMap": true,
-        "lib": [
-            "ES2018"
-        ],
-        "alwaysStrict": true,
-        "esModuleInterop": true,
-        "strictNullChecks": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noImplicitOverride": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "resolveJsonModule": true,
-        "paths": {
-            "@arrecife/*": ["packages/*/src/index.ts"]
-        }
-    },
-    "references": [
-        {"path": "./packages/server"}
-    ],
-    "exclude": ["node_modules", "dist", "*.d.ts"]
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"ignoreDeprecations": "5.0"
+	}
+	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+	// from the referenced tsconfig.json - TypeScript does not merge them in
 }
