--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
 		"@types/bcrypt": "^5.0.0",
 		"@types/validator": "^13.7.15",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
