--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@prisma/client": "^4.13.0",
 		"bcrypt": "^5.1.0",
 		"bootstrap": "^5.2.3",
+		"bootstrap-icons": "^1.10.5",
 		"validator": "^13.9.0"
 	}
 }
