--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"bcrypt": "^5.1.0",
 		"bootstrap": "^5.2.3",
 		"bootstrap-icons": "^1.10.5",
+		"svelte-select": "^5.6.1",
 		"validator": "^13.9.0"
 	}
 }
