--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
-		"@types/bcrypt": "^5.0.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/validator": "^13.7.15",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -38,7 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.13.0",
-		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.2.3",
 		"bootstrap-icons": "^1.10.5",
 		"svelte-select": "^5.6.1",
