change environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+DATABASE_PROTOCOL='mysql'
+DATABASE_USER='johndoe'
+DATABASE_PASSWORD='randompassword'
+DATABASE_HOST='localhost'
+DATABASE_PORT=3306
+DATABASE_SCHEMA='mydb'
+DATABASE_PARAMS=''
+
+DATABASE_URL="${DATABASE_PROTOCOL}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_SCHEMA}?${DATABASE_PARAMS}"
+
+SVELTEKIT_HOST='0.0.0.0'
+SVELTEKIT_PORT='80'
+SVELTEKIT_ORIGIN='change.this.localhost'
+
+SESSION_COOKIE_NAME='id'
