remove sveltekit prefix from variables

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ DATABASE_PARAMS=''
 
 DATABASE_URL="${DATABASE_PROTOCOL}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_SCHEMA}?${DATABASE_PARAMS}"
 
-SVELTEKIT_HOST='0.0.0.0'
-SVELTEKIT_PORT='80'
-SVELTEKIT_ORIGIN='change.this.localhost'
+HOST='0.0.0.0'
+PORT='80'
+ORIGIN='change.this.localhost'
 
 SESSION_COOKIE_NAME='id'
